<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">


            <EditText
                android:id="@+id/ETCantidadLeche"
                android:layout_width="145dp"
                android:layout_height="50dp"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/Cantidad_de_leche"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVCantidadLeche" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLista"
                android:layout_width="196dp"
                android:layout_height="174dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                app:layout_constraintStart_toEndOf="@+id/TVCantidadLeche"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/TVCantidadLeche"
                android:layout_width="190dp"
                android:layout_height="59dp"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="56dp"
                android:text="@string/label_cantidad_de_leche"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTipoEnvase" />

            <TextView
                android:id="@+id/TVNroDeRuta"
                android:layout_width="183dp"
                android:layout_height="49dp"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="352dp"
                android:text="@string/label_numero_de_ruta"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TVNombreProveedor"
                android:layout_width="183dp"
                android:layout_height="42dp"
                android:layout_marginStart="68dp"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="352dp"
                android:text="@string/label_nombre_proveedor"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/TVNroDeRuta"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/BtnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="240dp"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="44dp"
                android:onClick="guardar"
                android:text="@string/label_boton"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETCantidadLeche" />

            <TextView
                android:id="@+id/tvTipoEnvase"
                android:layout_width="77dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="100dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/TVNroDeRuta"
                tools:text="@string/tvTipoEnvase" />

            <Spinner
                android:id="@+id/spinnerRuta"
                android:layout_width="75dp"
                android:layout_height="70dp"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVNroDeRuta" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/spinnerRuta"
                app:layout_constraintTop_toBottomOf="@+id/TVNombreProveedor">

                <EditText
                    android:id="@+id/ETNombreProveedor"
                    android:layout_width="197dp"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:hint="@string/Nombre_del_proveedor"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="28dp"
                    android:layout_height="30dp"
                    android:onClick="borrarBusqueda"
                    android:text="X"
                    android:textSize="8sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="97dp"
                android:layout_height="23dp"
                android:layout_marginStart="84dp"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="20dp"
                android:text="Entrega en:"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerRuta" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>



